--- a/gb/23/6/12/n14014537.md
+++ b/gb/23/6/12/n14014537.md
@@ -3,13 +3,12 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>张善政出席农业产销班企业化经营辅导讲习</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/06/id14014538-619057-600x400.jpg" />
-<h6>桃园市长张善政12日出席“112年度桃园市农业产销班企业化经营辅导讲习”。（桃园市农业局提供）
-</h6>
+<h6>桃园市长张善政12日出席“112年度桃园市农业产销班企业化经营辅导讲习”。（桃园市农业局提供）</h6>
 <hr>
 <p>【大纪元2023年06月12日讯】（大纪元记者徐乃义台湾桃园报导）庇佑农民的五谷神农大帝圣诞，感念先民胼手胝足辛苦奠下农业基业，桃园市政府农业局12日办理“农业产销班企业化经营辅导讲习”，邀请各区农会、产销班长到场研习，期许农民吸取企业化经营新知识，成为现代化神农，迈向智慧农业，提升农民竞争力。</p>
-<figure id="14014539" aria-describedby="caption-14014539" style="width: 449px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/06/id14014539-619058-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2023/06/id14014539-619058-450x300.jpg" alt="“农业产销班企业化经营辅导讲习”，邀请各区农会、产销班长到场研习。" width="449" b="299" /></a><figcaption id="caption-14014539" class="wp-caption-text">“农业产销班企业化经营辅导讲习”，邀请各区农会、产销班长到场研习。（桃园市农业局提供）</figcaption></figure>
+<figure id="14014539" aria-describedby="caption-14014539" style="width: 449px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/06/id14014539-619058-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2023/06/id14014539-619058-450x300.jpg" alt="“农业产销班企业化经营辅导讲习”，邀请各区农会、产销班长到场研习。" width="449" b="299"/></a><figcaption id="caption-14014539" class="wp-caption-text">“农业产销班企业化经营辅导讲习”，邀请各区农会、产销班长到场研习。（桃园市农业局提供）</figcaption></figure>
 <p>桃园市长张善政12日出席“112年度桃园市农业产销班企业化经营辅导讲习”，现场张善政也实际操作远端智慧监控、灌溉系统，该系统能搜集各项环境数据，包含温度、湿度、土壤含水量及土壤肥力等，并随时查看田间作物生长，也能预约或即时执行灌溉功能。</p>
-<figure id="attachment_14014540" aria-describedby="caption-attachment-14014540" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/06/id14014540-619059.jpg"><img loading="lazy" decoding="async" class="size-medium wp-image-14014540" src="https://i.epochtimes.com/assets/uploads/2023/06/id14014540-619059-450x163.jpg" alt="" width="450" b="163" /></a><figcaption id="caption-attachment-14014540" class="wp-caption-text">市府特别成立“桃园市政府智慧农业推动小组”，小组囊括产官学研等各智慧农业领域专家，为市府推动智慧农业提供相关指导方针。（桃园市农业局提供）</figcaption></figure>
+<figure id="attachment_14014540" aria-describedby="caption-attachment-14014540" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/06/id14014540-619059.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-medium wp-image-14014540" src="https://i.epochtimes.com/assets/uploads/2023/06/id14014540-619059-450x163.jpg" alt="" width="450" b="163"></a><figcaption id="caption-attachment-14014540" class="wp-caption-text">市府特别成立“桃园市政府智慧农业推动小组”，小组囊括产官学研等各智慧农业领域专家，为市府推动智慧农业提供相关指导方针。（桃园市农业局提供）</figcaption></figure>
 <p>张善政表示，桃园具有优良的智慧农业实力，技术可实际应用于桃园多项农作物，未来将逐步扩展推广，以提升桃园农业生产效率。</p>
 <p>今年度的讲习首次以智慧农业为主轴，希望透过讲习让农友了解何谓智慧农业，及如何实际将智慧科技应用到农业生产及田间管理，其中邀请到行政院农业委员会科技处研究发展科长汤惟真讲授“智慧农业与数位转型”，寰宏农业科技天气探长林伟文讲授“智农设施(设备)的实际应用分享及展示”。</p>
 <p>张善政表示，为应对农业面临缺工、生产成本不断提升，及气候剧烈变迁的挑战，桃园市政府积极推动智慧农业，将智慧科技导入传统农业，期望利用省工高效的农机、智慧环控的系统及大数据的分析，协助桃园市农民更能因应内外在环境的变化。</p>
@@ -17,41 +16,33 @@
 <p>要将传统农业转型成智慧农业的过程相当艰辛，然而相信在市政府、农粮署的行政资源投入及桃改场、茶改场的专业技术辅导，最后加上地方农会的协助推广，期许能逐步稳健桃园市农业经营并提升竞争优势，开创桃园农业新契机与发展。◇</p>
 <p>责任编辑：筱珮</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/2/21/n13593859.md#1">台东县庆祝农民节 表彰118位优秀农民</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/29/n13680912.md#1">花莲县玉里、富里2产销班 荣获全国绩优</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/27/n13721567.md#1">桃园区农会获“第15届农业金融奖”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/7/n13775511.md#1">县长现身全国十大绩优果树产销班 行销优质水果</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/28/n13790645.md#1">桃园市南区安家实物银行开幕 郑文灿一日店长</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/17/n13952585.md#1">神农奖得主观神韵：遵循真善忍 好事会发生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347047.md#1">桃市导入智慧科技提升工地安全 借鉴国际经验精进</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347030.md#1">寿星齐聚 Xpark与十俱进小小生命大庆典</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347012.md#1">张汉明及邹赐枝捐桃园救护车 完善桃园救护服务</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347025.md#1">长庚大学携手瑞典皇家理工学院 合作学硕双联学位计划</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/1/n10353384.md#1" target="_blank">郑恩宠：中国打压 招安律师与林昭精神</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/5/n9109957.md#1" target="_blank">永远的传奇—从长春到世界（下）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/4/n10889466.md#1" target="_blank">裴毅然：中共小知党（四）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/29/n10261167.md#1" target="_blank">一位加拿大生物学家无止境的神奇之路</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14342225.md#1">《对我而言，你是珍贵的》：家之所以为家</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345929.md#1">【时事金扫描】针对中共 美军两大台海密战计划</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343377.md#1">【环球直击】哈马斯袭击以色列一周年 各地悼念</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345153.md#1">【百年真相】最得宋庆龄信任 此人为何寻短见？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343180.md#1">三款SUV秋季或大幅涨价 含畅销车丰田RAV4</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345122.md#1">红三代炫富：过生日奶奶给1.8亿 存款逾24亿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344939.md#1">若有1000美元闲钱 八项明智的理财生财之道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344745.md#1">女星李一桐搭机光脚蹭座垫 视频曝光引争议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344719.md#1">副歌交由现场观众合唱 李玉刚遭疑“躲高音”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344945.md#1">这一物可以让水龙头闪闪发光 你可能想不到</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341564.md#1">苦瓜抗癌预防脂肪肝 一类人慎食</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/27/n14339916.md#1">拉筋强肌助眠 改善健康 踮脚尖五好处</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145199.md#1">长者自救锻炼法 逆转骨质疏松</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650550.md#1">【未解之谜】NASA也无法解释 太阳系神秘入侵者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652776.md#1">【军事情报局】泰柬战争升级 F-16低空轰炸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652899.md#1">【直播】NASA为探索月球、火星所做的准备</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652954.md#1">【百年真相】半夜鸡不叫：周扒皮冤案揭秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651393.md#1">普渡大学为何指示院系拒收中国留学生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651371.md#1">堕胎变催育 中共黑手再次伸向中国女性</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652089.md#1">巧合还是刻意？中共官微帖文惊现“于朦胧”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651415.md#1">刘诗诗得奖遭临时撤换 主办方“爱奇艺”挨轰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652213.md#1">张柏芝遭索赔逾千万 法庭上情绪失控崩溃痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652972.md#1">消失一年被传死讯 陆网红冯提莫自曝停工内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652371.md#1">同一双袜子可以穿两次以上再洗吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/6/12/n14014537.htm">张善政出席农业产销班企业化经营辅导讲习</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/6/12/n14014537.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
